{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "PlayerActions",
            "id": "43c4c368-ce11-4a60-b1b8-e515fae9e7c8",
            "actions": [
                {
                    "name": "Accelerate",
                    "type": "Button",
                    "id": "5882724c-31e7-4cd0-a65d-a8de885c0a57",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SlowDown",
                    "type": "Button",
                    "id": "25d130e2-db3f-471c-aadb-b60a9954c332",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5ddaf072-f836-48fd-9b27-53040f0e12a0",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Accelerate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7dda8a7-7bc1-47ee-ac62-238b76900b70",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SlowDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}